--- a/index.html
+++ b/index.html
@@ -9,144 +9,199 @@
   <!-- Подключение шрифта Bebas Neue -->
   <link  href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 
-  <style>
+<style>
+  body {
+    font-family: 'Bebas Neue', cursive;
+    margin: 0;
+    padding: 0;
+    background: white;
+    color: black;
+  }
 
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+    padding: 10px 20px;
+  }
 
-    body {
-      font-family: 'Bebas Neue', cursive;
-      margin: 0;
-      padding: 0;
-      background: white;
-      color: black;
+  .menu-icon {
+    font-size: 35px;
+    cursor: pointer;
+    margin-left: 35px;
+  }
+
+  .nav-center {
+    display: flex;
+    gap: 450px;
+    font-style: italic;
+    font-size: 45px;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+  }
+
+  .nav-center a,
+  .nav-center .shop-name {
+    color: black;
+    text-decoration: none;
+    font-family: inherit;
+  }
+
+  main {
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .product-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 35px;
+    max-width: 1600px;
+  }
+
+  .product {
+    border: 2px solid black;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-family: inherit;
+    transition: transform 0.2s ease;
+  }
+
+  .product:hover {
+    transform: scale(1.05);
+    border-color: #555;
+  }
+
+  .product img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .product p {
+    font-style: italic;
+    margin: 0;
+    font-size: 18px;
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -260px;
+    width: 250px;
+    height: 100%;
+    background: white;
+    border-right: 2px solid black;
+    padding: 20px;
+    transition: left 0.3s ease;
+    z-index: 1001;
+  }
+
+  .sidebar.active {
+    left: 0;
+  }
+
+  .close-btn {
+    font-size: 28px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+  }
+
+  .sidebar ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 60px;
+  }
+
+  .sidebar li {
+    margin-bottom: 20px;
+  }
+
+  .sidebar a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  }
+
+  .nav-text {
+    display: inline-block;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+  }
+
+  .nav-text:hover {
+    transform: translateY(-8px) scale(1.1);
+  }
+
+  /* 🔥 Адаптив: добавлено в конец */
+  @media (max-width: 768px) {
+    header {
+      flex-direction: column;
+      gap: 10px;
     }
 
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 2px solid black;
-      padding: 10px 20px;
+    .nav-center {
+      flex-direction: column;
+      gap: 15px;
+      font-size: 24px;
     }
 
     .menu-icon {
-  font-size: 35px;
-  cursor: pointer;
-  margin-left: 35px; /* можно менять это число как хочешь */
-}
-
-
-
-    .nav-center {
-      display: flex;
-      gap: 450px;
-      font-style: italic;
-      font-size: 45px;
-      justify-content: center;
-      align-items: center;
-      flex-grow: 1;
+      margin: 0 auto;
     }
 
-    .nav-center a,
-    .nav-center .shop-name {
-      color: black;
-      text-decoration: none;
-      font-family: inherit;
+    .shop-name {
+      font-size: 28px;
     }
 
     main {
-      padding: 40px;
-      display: flex;
-      justify-content: center;
+      padding: 20px 10px;
     }
 
     .product-grid {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      gap: 35px;
-      max-width: 1600px;
-    }
-
-    .product {
-      border: 2px solid black;
-      padding: 15px;
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      font-family: inherit;
-      transition: transform 0.2s ease;
-    }
-
-    .product:hover {
-      transform: scale(1.05);
-      border-color: #555;
-    }
-
-    .product img {
-      width: 100%;
-      height: auto;
-      display: block;
-      margin-bottom: 10px;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 20px;
     }
 
     .product p {
-      font-style: italic;
-      margin: 0;
-      font-size: 18px;
+      font-size: 14px;
     }
 
-    /* Стили бокового меню */
     .sidebar {
-      position: fixed;
-      top: 0;
-      left: -260px;
-      width: 250px;
-      height: 100%;
-      background: white;
-      border-right: 2px solid black;
-      padding: 20px;
-      transition: left 0.3s ease;
-      z-index: 1001;
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .nav-center {
+      font-size: 20px;
     }
 
-    .sidebar.active {
-      left: 0;
+    .shop-name {
+      font-size: 24px;
     }
 
-    .close-btn {
-      font-size: 28px;
-      cursor: pointer;
-      position: absolute;
-      right: 20px;
-      top: 10px;
+    .product {
+      padding: 10px;
     }
 
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-      margin-top: 60px;
+    .product-grid {
+      grid-template-columns: 1fr;
     }
 
-    .sidebar li {
-      margin-bottom: 20px;
+    .product p {
+      font-size: 13px;
     }
-
-    .sidebar a {
-      text-decoration: none;
-      font-size: 22px;
-      color: black;
-    }
-  .nav-text {
-  display: inline-block; /* Чтобы transform работал */
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.nav-text:hover {
-  transform: translateY(-8px) scale(1.1); /* Подпрыгивает на 8px и увеличивается на 10% */
-}
-
-
-
+  }
+</style>
   </style>
 </head>
 <body>
