--- a/index.html
+++ b/index.html
@@ -167,7 +167,11 @@
     }
 
     .menu-icon {
-      margin: 0 auto;
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      margin: 0; /* убираем auto */
+      z-index: 2000;
     }
 
     .shop-name {
