--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SHOP-_-36</title>
+  <title>Online clothing store | SHOP-_-36</title>
+  <meta name="description" content="Unisex clothing from Europe: stylish t-shirts, dresses, and more. Fast shipping to Poland, Romania, Hungary, and Greece. #unisex #fashion #clothing #europeanfashion #tshirts #dresses #shipping" />
+ <!-- Добавляем описание -->
   <link rel="icon" href="static/images/1-9cbbb33c.ico" type="image/ico" />
 
   <!-- Подключение шрифта Bebas Neue -->
-  <link  href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
+
+
 
 <style>
-  body {
-    font-family: 'Bebas Neue', cursive;
-    margin: 0;
+body {
+  font-family: 'Oswald', sans-serif;
+    font-weight: 500;
     padding: 0;
     background: white;
     color: black;
@@ -26,6 +30,7 @@
     padding: 10px 20px;
     flex-wrap: wrap;
   }
+
 
   .menu-icon {
     font-size: 35px;
@@ -174,8 +179,11 @@
       background: white; /* на всякий случай */
       padding: 5px;
       border-radius: 4px;
+      transition: transform 0.8s ease;
     }
-
+    .menu-icon:hover {
+      transform: scale(1.3);
+    }
 
     .menu-icon.active {
       display: none;
@@ -225,7 +233,7 @@
     .product p {
       font-size: 13px;
     }
-  }
+
 </style>
 
   </style>
@@ -233,6 +241,24 @@
 <body>
   <header>
     <div class="menu-icon">✠</div>
+
+    <style>
+
+    .menu-icon {
+      font-size: 35px;
+      cursor: pointer;
+      margin-left: 15px;
+      transition: transform 0.3s ease;
+}
+
+.menu-icon:hover {
+  transform: scale(1.3);
+}
+
+</style>
+
+
+</style>
     <div class="nav-center">
       <a href="#" class="nav-text">NEW</a>
        <a href="https://www.vinted.ro/member/227684154" class="shop-name nav-text">✠SHOP-_-36✠</a>
@@ -244,9 +270,11 @@
   <div class="sidebar" id="sidebar">
     <div class="close-btn" onclick="closeSidebar()">✖</div>
     <ul>
+      <li><a href="#">HOME</a></li>
       <li><a href="#">NEW</a></li>
       <li><a href="#">BRANDS</a></li>
-      <li><a href="#">ABOUT US</a></li>
+      <li><a href="/about">ABOUT US</a></li>
+      <li><a href="https://www.vinted.ro/member/227684154?tab=feedback" target="_blank">REVIEWS</a></li>
     </ul>
   </div>
 <main>
